[tool.poetry]
name = "autolabeler"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = "^0.27.0.post1"
torch = "^2.2.0"
torchvision = "^0.17.0"
ftfy = "^6.1.3"
regex = "^2023.12.25"
tqdm = "^4.66.1"
clip = {git = "https://github.com/openai/CLIP.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
